change: fix the mobile x overflow issue and adapt SVG percentage for mobile short screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -1439,7 +1439,10 @@ body {
   padding: 10rem 0;
 }
 .projects-section .project-text {
-  padding: 3rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 5rem;
   --bs-text-opacity: 1;
   color: rgba(255, 255, 255, 0.5) !important;
   font-size: 16px;
