--- a/css/styles.full.css
+++ b/css/styles.full.css
@@ -11926,7 +11926,10 @@ body {
   }
 }
 .projects-section .project-text {
-  padding: 3rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 5rem;
   --bs-text-opacity: 1;
   color: rgba(255, 255, 255, 0.5) !important;
   font-size: 16px;
